# AW-Modloader

./: .prettierrc  CHANGELOG.md  README.md  package-lock.json  package.json  svelte.config.js
.github/: dependabot.yml
src/: app.html
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/data/: modinfo.json
src-tauri/icons/: app-icon.ai  icon.icns
src-tauri/src/: config.rs  error.rs  filetree.rs  main.rs  modmanager.rs
src-tauri/src/db/: database.rs  db.rs  keys.rs  mod.rs
src-tauri/src/modmanager/: archive.rs  error.rs  filetree.rs  injection.rs  mod.rs  registry.rs
src/lib/: About.svelte  AdvancedSettings.svelte  AppBar.svelte  AppFooter.svelte  ErrorDialog.svelte  ErrorSnackbar.svelte  InitialConfigDialog.svelte  ModList.svelte  backendErrorHandling.ts  modStore.ts  url.ts
src/locale/: de.json  en.json  i18n.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/theme/: _smui-theme.scss  common.scss
src/theme/dark/: _smui-theme.scss
static/: smui-dark.css  smui.css
