[package]
name = "app"
version = "0.1.0"
description = "AW Modloader"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.6", features = ["dialog-message", "dialog-open", "process-exit", "shell-open", "windows7-compat"] }
directories = "4.0"
log = "0.4"
lazy_static = "1.4"
sled = "0.34"
bincode = "1.3"
simplelog = "0.12"
semver = {version = "1.0", features = ["serde"] }
compress-tools = "0.13"
tokio = "1.21"
dunce = "1.0"
ts-rs = {version = "6.2", features = ["serde-compat"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
